--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.8.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
-
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.gitee.sop</groupId>
 	<artifactId>sop-parent</artifactId>
@@ -30,7 +23,7 @@
 
 	<properties>
 		<!-- Project revision -->
-		<revision>4.2.7-SNAPSHOT</revision>
+		<revision>4.3.0-SNAPSHOT</revision>
 		<java.version>1.8</java.version>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -38,12 +31,12 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 
 		<!-- springboot 版本-->
-		<spring-boot.version>2.1.8.RELEASE</spring-boot.version>
+		<spring-boot.version>2.3.2.RELEASE</spring-boot.version>
 		<!-- spring cloud 版本 -->
-		<spring-cloud.version>Greenwich.SR6</spring-cloud.version>
+		<spring-cloud.version>Hoxton.SR8</spring-cloud.version>
 		<!-- spring cloud alibaba 版本 -->
 		<!-- 具体版本对应关系见：https://github.com/alibaba/spring-cloud-alibaba/wiki/%E7%89%88%E6%9C%AC%E8%AF%B4%E6%98%8E -->
-		<spring-cloud-alibaba.version>2.1.2.RELEASE</spring-cloud-alibaba.version>
+		<spring-cloud-alibaba.version>2.2.5.RELEASE</spring-cloud-alibaba.version>
 
 
 		<!-- Logging -->
@@ -73,11 +66,6 @@
 
 	<dependencyManagement>
 		<dependencies>
-			<dependency>
-				<groupId>io.projectreactor.netty</groupId>
-				<artifactId>reactor-netty</artifactId>
-				<version>0.8.19.RELEASE</version>
-			</dependency>
 			<!-- 加了这个就不需要加版本号了 -->
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
