--- a/sop-common/sop-service-common/pom.xml
+++ b/sop-common/sop-service-common/pom.xml
@@ -5,9 +5,9 @@
 
     <parent>
         <groupId>com.gitee.sop</groupId>
-        <artifactId>sop-parent</artifactId>
+        <artifactId>sop-common</artifactId>
         <version>${revision}</version>
-        <relativePath>../../pom.xml</relativePath> <!-- lookup parent from repository -->
+        <relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
