--- a/doc/pom.xml
+++ b/doc/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.gitee.sop</groupId>
 	<artifactId>doc</artifactId>
-	<version>${revision}</version>
+	<version>4.3.0-SNAPSHOT</version>
 
 	<properties>
 		<!-- Generic properties -->
