--- a/sop-common/sop-bridge-eureka/pom.xml
+++ b/sop-common/sop-bridge-eureka/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.gitee.sop</groupId>
         <artifactId>sop-common</artifactId>
-        <version>${revision}</version>
+        <version>4.3.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
     <modelVersion>4.0.0</modelVersion>
