--- a/sop-gateway/src/main/resources/META-INF/gateway.properties
+++ b/sop-gateway/src/main/resources/META-INF/gateway.properties
@@ -35,7 +35,7 @@ spring.datasource.hikari.pool-name=HikariCP
 spring.datasource.hikari.max-lifetime=500000
 
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
-spring.cloud.gateway.discovery.locator.enabled=true
+#spring.cloud.gateway.discovery.locator.enabled=true
 # \u54CD\u5E94\u8D85\u65F6\uFF0C\u9ED8\u8BA410\u79D2\uFF0810000\uFF09
 spring.cloud.gateway.httpclient.response-timeout=10000
 spring.cloud.gateway.httpclient.pool.max-idle-time=60000
